Test with dummyController and TS compiler in WebStorm

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-<menu></menu>
-<search></search>
+<cd-menu></cd-menu>
+<cd-search></cd-search>
 
+
+<script type="text/javascript" src="js/controllers/DummyController.js"></script>
 
 </body>
 </html>
