Simple menu directive

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-ng-app="myApp">
 <head>
     <meta charset="UTF-8">
 
@@ -12,8 +12,13 @@
 <cd-menu></cd-menu>
 <cd-search></cd-search>
 
+<!-- TODO angular JS includen? -->
 
+<script type="text/javascript" src="../../node_modules/angular/angular.js"></script>
+
+<script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/controllers/DummyController.js"></script>
+<script type="text/javascript" src="js/directives/MenuDirective.js"></script>
 
 </body>
 </html>
