renamed to fettyBossy

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="myApp">
+<html lang="en" data-ng-app="fettyBossy">
 <head>
     <meta charset="UTF-8">
 
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<cd-menu></cd-menu>
+<fb-menu></fb-menu>
 <cd-search></cd-search>
 
 <!-- TODO angular JS includen? -->
