two search directives with form and list, getting its data from service. One controller for both directives.

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -19,13 +19,22 @@
 
 <!-- TODO angular JS includen? -->
 
+<!--libs-->
 <script type="text/javascript" src="../../node_modules/angular/angular.js"></script>
 <script type="text/javascript" src="../../node_modules/angular-route/angular-route.js"></script>
 
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
-<script type="text/javascript" src="js/controllers/DummyController.js"></script>
+
+<script type="text/javascript" src="js/controllers/SearchResultlistController.js"></script>
+
+<script type="text/javascript" src="js/data/recipe.js"></script>
+
 <script type="text/javascript" src="js/directives/MenuDirective.js"></script>
+<script type="text/javascript" src="js/directives/SearchFormDirective.js"></script>
+<script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
+
+<script type="text/javascript" src="js/services/RepositoryService.js"></script>
 
 </body>
 </html>
