--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,10 +1,8 @@
 <ul>
 
-    <li>menüpunkt 1</li>
-    <li>menüpunkt 2</li>
-    <li>menüpunkt 3</li>
+    <li><a href="#/viewRecipe"> VIEW </a></li>
+    <li><a href="#/editRecipe"> EDIT </a></li>
+    <li><a href="#/searchRecipe"> SEARCH </a></li>
 
 </ul>
 
-<a href="#/viewRecipe"> VIEW </a>
-<a href="#/editRecipe"> EDIT </a>
