--- a/Server/public/js/directives/searchResultlist.tpl.html
+++ b/Server/public/js/directives/searchResultlist.tpl.html
@@ -2,7 +2,7 @@
 
 <div>
     <div ng-repeat="recipe in searchResultlistCtrl.recipes | filter: searchResultlistCtrl.searchQuery">
-        {{recipe.title}}
+        <a href="#/viewRecipe/{{recipe.id}}">{{recipe.title}}</a>
     </div>
 </div>
 
