moved session data into service

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -37,6 +37,7 @@
 <script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
 
 <script type="text/javascript" src="js/services/RepositoryService.js"></script>
+<script type="text/javascript" src="js/services/SessionService.js"></script>
 
 </body>
 </html>
