implemented gui login/register

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -26,13 +26,16 @@
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
 
+<script type="text/javascript" src="js/controllers/RegisterController.js"></script>
 <script type="text/javascript" src="js/controllers/SearchResultlistController.js"></script>
 <script type="text/javascript" src="js/controllers/SessionController.js"></script>
 <script type="text/javascript" src="js/controllers/ViewRecipeController.js"></script>
 
 <script type="text/javascript" src="js/data/recipe.js"></script>
 
+<script type="text/javascript" src="js/directives/LoginFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/MenuDirective.js"></script>
+<script type="text/javascript" src="js/directives/RegisterFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
 
