--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,6 +1,6 @@
 <ul ng-controller="SessionController as sessionCtrl">
-    <li><a href="#"> Start </a></li>
-    <li ng-hide="sessionCtrl.isLoggedIn()"><a href="" ng-click="sessionCtrl.logon()">Login / Register</a></li>
+    <li><a href="#/searchRecipe"> Suche </a></li>
+    <li ng-hide="sessionCtrl.isLoggedIn()"><a href="#">Login / Register</a></li>
     <li ng-show="sessionCtrl.isLoggedIn()">[{{sessionCtrl.getUser().name}}]</li>
     <li ng-hide="sessionCtrl.isLoggedIn()">[ Gast ]</li>
     <li ng-show="sessionCtrl.isLoggedIn()"><a href="" ng-click="sessionCtrl.logout()">Logout</a></li>
