print recipe details with filter for hours:minutes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -39,6 +39,8 @@
 <script type="text/javascript" src="js/directives/SearchFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
 
+<script type="text/javascript" src="js/filters/MinutesToHoursMinutesFilter.js"></script>
+
 <script type="text/javascript" src="js/services/RepositoryService.js"></script>
 <script type="text/javascript" src="js/services/SessionService.js"></script>
 
