--- a/Server/public/js/directives/searchForm.tpl.html
+++ b/Server/public/js/directives/searchForm.tpl.html
@@ -1,6 +1,6 @@
-<label for="recipeSearchInput">Search:</label>
+<div class="searchForm">
+    <label for="recipeSearchInput">Search:</label>
 
-<div>
     <input id="recipeSearchInput" type="text"
            ng-model="searchResultlistCtrl.searchQuery"/>
 </div>
