user detail-view with recipes, using the same directive as the search view

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -30,6 +30,7 @@
 <script type="text/javascript" src="js/controllers/SearchResultlistController.js"></script>
 <script type="text/javascript" src="js/controllers/SessionController.js"></script>
 <script type="text/javascript" src="js/controllers/ViewRecipeController.js"></script>
+<script type="text/javascript" src="js/controllers/ViewUserController.js"></script>
 
 <script type="text/javascript" src="js/data/recipe.js"></script>
 
@@ -38,8 +39,10 @@
 <script type="text/javascript" src="js/directives/RegisterFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
+<script type="text/javascript" src="js/directives/UserDetailsDirective.js"></script>
 
 <script type="text/javascript" src="js/filters/MinutesToHoursMinutesFilter.js"></script>
+<script type="text/javascript" src="js/filters/RecipeByUserFilter.js"></script>
 
 <script type="text/javascript" src="js/services/RepositoryService.js"></script>
 <script type="text/javascript" src="js/services/SessionService.js"></script>
