--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -2,7 +2,8 @@
     <ul ng-controller="SessionController as sessionCtrl">
         <li><a href="#/searchRecipe"> Suche </a></li>
         <li ng-hide="sessionCtrl.isLoggedIn()"><a href="#">Login / Register</a></li>
-        <li ng-show="sessionCtrl.isLoggedIn()">[{{sessionCtrl.getUser().name}}]</li>
+        <li ng-show="sessionCtrl.isLoggedIn()">[<a href="#/viewUser/{{sessionCtrl.getUser().id}}">{{sessionCtrl.getUser().name}}</a>]
+        </li>
         <li ng-hide="sessionCtrl.isLoggedIn()">[ Gast ]</li>
         <li ng-show="sessionCtrl.isLoggedIn()"><a href="" ng-click="sessionCtrl.logout()">Logout</a></li>
     </ul>
