initial edit page

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
 
+<script type="text/javascript" src="js/controllers/EditRecipeController.js"></script>
 <script type="text/javascript" src="js/controllers/RegisterController.js"></script>
 <script type="text/javascript" src="js/controllers/SearchResultlistController.js"></script>
 <script type="text/javascript" src="js/controllers/SessionController.js"></script>
