--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -27,6 +27,7 @@
 <script type="text/javascript" src="js/app-routes.js"></script>
 
 <script type="text/javascript" src="js/controllers/EditRecipeController.js"></script>
+<script type="text/javascript" src="js/controllers/ListRecipeRatingsController.js"></script>
 <script type="text/javascript" src="js/controllers/RegisterController.js"></script>
 <script type="text/javascript" src="js/controllers/SearchResultlistController.js"></script>
 <script type="text/javascript" src="js/controllers/SessionController.js"></script>
@@ -35,6 +36,7 @@
 
 <script type="text/javascript" src="js/data/recipe.js"></script>
 
+<script type="text/javascript" src="js/directives/ListRecipeRatingsDirective.js"></script>
 <script type="text/javascript" src="js/directives/LoginFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/MenuDirective.js"></script>
 <script type="text/javascript" src="js/directives/RegisterFormDirective.js"></script>
