--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,10 +1,10 @@
 <div class="menu">
     <ul ng-controller="SessionController as sessionCtrl">
         <li><a href="#/searchRecipe"> Suche </a></li>
-        <li ng-hide="sessionCtrl.isLoggedIn()"><a href="#">Login / Register</a></li>
-        <li ng-show="sessionCtrl.isLoggedIn()">[<a href="#/viewUser/{{sessionCtrl.getUser().id}}">{{sessionCtrl.getUser().name}}</a>]
+        <li ng-hide="sessionCtrl.getUser()"><a href="#">Login / Register</a></li>
+        <li ng-show="sessionCtrl.getUser()">[<a href="#/viewUser/{{sessionCtrl.getUser().id}}">{{sessionCtrl.getUser().name}}</a>]
         </li>
-        <li ng-hide="sessionCtrl.isLoggedIn()">[ Gast ]</li>
-        <li ng-show="sessionCtrl.isLoggedIn()"><a href="" ng-click="sessionCtrl.logout()">Logout</a></li>
+        <li ng-hide="sessionCtrl.getUser()">[ Gast ]</li>
+        <li ng-show="sessionCtrl.getUser()"><a href="" ng-click="sessionCtrl.logout()">Logout</a></li>
     </ul>
 </div>
