add / edit rating

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
 
+<script type="text/javascript" src="js/controllers/AddeditRecipeRatingController.js"></script>
 <script type="text/javascript" src="js/controllers/EditRecipeController.js"></script>
 <script type="text/javascript" src="js/controllers/ListRecipeRatingsController.js"></script>
 <script type="text/javascript" src="js/controllers/RegisterController.js"></script>
@@ -36,6 +37,7 @@
 
 <script type="text/javascript" src="js/data/recipe.js"></script>
 
+<script type="text/javascript" src="js/directives/TTTAddeditRecipeRatingDirective.js"></script>
 <script type="text/javascript" src="js/directives/ListRecipeRatingsDirective.js"></script>
 <script type="text/javascript" src="js/directives/LoginFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/MenuDirective.js"></script>
