halb schoen... halt

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -2,10 +2,19 @@
 <html lang="en" data-ng-app="fettyBossy">
 <head>
     <meta charset="UTF-8">
-
+    <link rel="stylesheet" href="css/material.css">
     <link rel="stylesheet" href="css/styles.css"/>
-
-    <title></title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="css/style-temp.css" />
+    <title>Fetty Bossy-DB version 0.1</title>
+    <style>
+        body {
+            background-image: url('pictures/pfanni-bg.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 
@@ -22,6 +31,8 @@
 <!--libs-->
 <script type="text/javascript" src="../../node_modules/angular/angular.js"></script>
 <script type="text/javascript" src="../../node_modules/angular-route/angular-route.js"></script>
+<script type="text/javascript" src="js/lib/angular.js"></script>
+<script type="text/javascript" src="js/lib/material.js"></script>
 
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
