initial server setup added required client libs into public/js/lib gulp setup for copy to build-folder

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -20,8 +20,8 @@
 <!-- TODO angular JS includen? -->
 
 <!--libs-->
-<script type="text/javascript" src="../../node_modules/angular/angular.js"></script>
-<script type="text/javascript" src="../../node_modules/angular-route/angular-route.js"></script>
+<script type="text/javascript" src="js/lib/angular.js"></script>
+<script type="text/javascript" src="js/lib/angular-route.js"></script>
 
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
