do not include interfaces in page

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -26,12 +26,11 @@
     </div>
 </div>
 
-<!-- TODO angular JS includen? -->
-
 <!--libs-->
 <script type="text/javascript" src="js/lib/angular.js"></script>
 <script type="text/javascript" src="js/lib/angular-route.js"></script>
 
+<!--own code - interface not imported because of no need in javascript -->
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
 
@@ -43,8 +42,6 @@
 <script type="text/javascript" src="js/controllers/SessionController.js"></script>
 <script type="text/javascript" src="js/controllers/ViewRecipeController.js"></script>
 <script type="text/javascript" src="js/controllers/ViewUserController.js"></script>
-
-<script type="text/javascript" src="js/data/recipe.js"></script>
 
 <script type="text/javascript" src="js/directives/AddeditRecipeRatingDirective.js"></script>
 <script type="text/javascript" src="js/directives/ListRecipeRatingsDirective.js"></script>
