cleanup mess with directives, controllers and routes

--- a/Server/public/js/directives/searchForm.tpl.html
+++ b/Server/public/js/directives/searchForm.tpl.html
@@ -2,5 +2,5 @@
     <label for="recipeSearchInput">Search:</label>
 
     <input id="recipeSearchInput" type="text"
-           ng-model="searchResultlistCtrl.searchQuery"/>
+           ng-model="recipeFilter.text"/>
 </div>
