--- a/Server/public/js/directives/userDetails.tpl.html
+++ b/Server/public/js/directives/userDetails.tpl.html
@@ -2,6 +2,6 @@
     User Details:
     <br/>
     <br/>
-    ID: {{viewUserCtrl.user._id}}<br/>
-    Name: {{viewUserCtrl.user.name}}
+    ID: {{user._id}}<br/>
+    Name: {{user.name}}
 </div>
