some little view improvements

--- a/Server/public/js/directives/addeditRecipeRating.tpl.html
+++ b/Server/public/js/directives/addeditRecipeRating.tpl.html
@@ -1,5 +1,5 @@
 <div class="addeditRecipeRating">
-    Add / Edit Rating
-
+    <span ng-show="showAsEdit">EDIT</span>
+    <span ng-show="!showAsEdit">ADD Rating</span>
 
 </div>
