--- a/Server/public/js/directives/registerForm.tpl.html
+++ b/Server/public/js/directives/registerForm.tpl.html
@@ -10,7 +10,6 @@
                        ng-model="user.name" required/>
                 <div ng-show="registerForm.$submitted || registerForm.registerName.$dirty || registerCtrl.registerEror">
                     <div ng-show="registerForm.registerName.$error.required">Tell us your name.</div>
-                    <div ng-show="registerCtrl.registerEror.nameMessage">{{registerCtrl.registerEror.nameMessage}}</div>
                 </div>
             </li>
             <li>
@@ -20,7 +19,6 @@
                 <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
                     <span ng-show="registerForm.registerEmail.$error.required">Tell us your email.</span>
                     <span ng-show="registerForm.registerEmail.$error.email">This is not a valid email.</span>
-                    <div ng-show="registerCtrl.registerEror.emailMessage">{{registerCtrl.registerEror.emailMessage}}</div>
                 </div>
             </li>
             <li>
@@ -29,11 +27,10 @@
                        ng-model="user.password" required/>
                 <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
                     <div ng-show="registerForm.registerPassword.$error.required">Fill in a password.</div>
-                    <div ng-show="registerCtrl.registerEror.passwordMessage">{{registerCtrl.registerEror.passwordMessage}}</div>
                 </div>
                 <br />
                 <div ng-show="registerCtrl.registerEror">
-                    <div>{{registerCtrl.registerEror.message}}</div>
+                    <div>{{registerCtrl.registerError}}</div>
                 </div>
             </li>
             <li>
