--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,10 +1,42 @@
-<div class="menu">
-    <ul ng-controller="SessionController as sessionCtrl">
-        <li><a href="#/searchRecipe"> Suche </a></li>
-        <li ng-hide="sessionCtrl.getUser()"><a href="#">Login / Register</a></li>
-        <li ng-show="sessionCtrl.getUser()">[<a href="#/viewUser/{{sessionCtrl.getUser()._id}}">{{sessionCtrl.getUser().name}}</a>]
-        </li>
-        <li ng-hide="sessionCtrl.getUser()">[ Gast ]</li>
-        <li ng-show="sessionCtrl.getUser()"><a href="" ng-click="sessionCtrl.logout()">Logout</a></li>
-    </ul>
-</div>
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__drawer-button">
+            <i class="material-icons">menu</i>
+        </div>
+        <div class="mdl-layout__header-row header-nav">
+            <span class="mdl-layout-title">Fetty Bossy DB</span>
+            <!-- Add spacer, to align navigation to the right -->
+            <div class="mdl-layout-spacer"></div>
+            <!-- Navigation -->
+            <nav class="mdl-navigation mdl-layout--large-screen-only" ng-controller="SessionController as sessionCtrl">
+                <a href="#/searchRecipe"> Suche </a>
+                <span ng-hide="sessionCtrl.getUser()">
+                    <a href="#/login">Login</a>
+                </span>
+                <span ng-show="sessionCtrl.getUser()">
+                    <a href="#/viewUser/{{sessionCtrl.getUser()._id}}">[{{sessionCtrl.getUser().name}}]</a>
+                </span>
+                <!--display gast login-->
+                <span ng-hide="sessionCtrl.getUser()">
+                    [ Gast ]
+                </span>
+                <span ng-show="sessionCtrl.getUser()">
+                    <a href="" ng-click="sessionCtrl.logout()">Logout</a>
+                </span>
+            </nav>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Fetty Bossy DB</span>
+        <nav class="mdl-navigation">
+            <a  href="#/searchRecipe"> Suche </a>
+             <span ng-hide="sessionCtrl.getUser()">
+                 <a class="mdl-navigation__link" href="#/login"> Login </a>
+             </span>
+            <span class="mdl-navigation" ng-hide="sessionCtrl.getUser()">
+               [ Gast ]
+            </span>
+            <span ng-show="sessionCtrl.getUser()">
+               <a class="mdl-navigation__link" href="#" ng-click="sessionCtrl.logout()">Logout</a>
+            </span>
+        </nav>
+    </div>
