--- a/Server/public/js/directives/registerForm.tpl.html
+++ b/Server/public/js/directives/registerForm.tpl.html
@@ -1,43 +1,56 @@
-<div class="registerForm"
-     ng-hide="sessionCtrl.isLoggedIn()">
+<div class="registerForm" ng-hide="sessionCtrl.isLoggedIn()">
     <form id="registerForm" name="registerForm"
           class="userForm"
           ng-submit="registerCtrl.register(user)">
         <ul>
             <li>
-                <label for="registerName">Name</label>
-                <input type="text" id="registerName" name="registerName"
-                       ng-model="user.name" required/>
-                <div ng-show="registerForm.$submitted || registerForm.registerName.$dirty || registerCtrl.registerEror">
-                    <div ng-show="registerForm.registerName.$error.required">Tell us your name.</div>
-                    <div ng-show="registerCtrl.registerEror.nameMessage">{{registerCtrl.registerEror.nameMessage}}</div>
-                </div>
+                    <label for="registerName">Name</label>
+                    <input type="text" id="registerName" name="registerName"
+                           ng-model="user.name" required/>
+                    <!--<div ng-show="registerForm.$submitted || registerForm.registerName.$dirty || registerCtrl.registerEror">-->
+                        <!--<span class="formfeedback" ng-show="registerForm.registerName.$error.required">Tell us your name.</span>-->
+                        <!--<span class="formfeedback" ng-show="registerCtrl.registerEror.nameMessage">{{registerCtrl.registerEror.nameMessage}}</span>-->
+                    <!--</div>-->
             </li>
             <li>
-                <label for="registerEmail">E-Mail</label>
-                <input type="email" id="registerEmail" name="registerEmail"
-                       ng-model="user.email" required/>
+                    <label for="registerEmail">E-Mail</label>
+                    <input type="email" id="registerEmail" name="registerEmail"
+                           ng-model="user.email" required/>
+                    <!--<div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">-->
+                        <!--<span class="formfeedback" ng-show="registerForm.registerEmail.$error.required">Tell us your email.</span>-->
+                        <!--<span  class="formfeedback" ng-show="registerForm.registerEmail.$error.email">This is not a valid email.</span>-->
+                        <!--<div ng-show="registerCtrl.registerEror.emailMessage">{{registerCtrl.registerEror.emailMessage}}</div>-->
+                    <!--</div>-->
+            </li>
+            <li>
+                    <label for="registerPassword">Passwort</label>
+                    <input type="password" id="registerPassword" name="registerPassword"
+                           ng-model="user.password" required/>
+                    <!--<div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">-->
+                        <!--<span class="formfeedback" ng-show="registerForm.registerPassword.$error.required">Fill in a password.</span>-->
+                        <!--<span class="formfeedback" ng-show="registerCtrl.registerEror.passwordMessage">{{registerCtrl.registerEror.passwordMessage}}</span>-->
+                    <!--</div>-->
+                    <div ng-show="registerCtrl.registerEror">
+                        <span class="formfeedback">{{registerCtrl.registerEror.message}}</span>
+                    </div>
+            </li>
+            <li>
+                <div ng-show="registerForm.$submitted || registerForm.registerName.$dirty || registerCtrl.registerEror">
+                    <span class="formfeedback" ng-show="registerForm.registerName.$error.required">Tell us your name.</span>
+                    <span class="formfeedback" ng-show="registerCtrl.registerEror.nameMessage">{{registerCtrl.registerEror.nameMessage}}</span>
+                </div>
                 <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
-                    <span ng-show="registerForm.registerEmail.$error.required">Tell us your email.</span>
-                    <span ng-show="registerForm.registerEmail.$error.email">This is not a valid email.</span>
+                    <span class="formfeedback" ng-show="registerForm.registerEmail.$error.required">Tell us your email.</span>
+                    <span  class="formfeedback" ng-show="registerForm.registerEmail.$error.email">This is not a valid email.</span>
                     <div ng-show="registerCtrl.registerEror.emailMessage">{{registerCtrl.registerEror.emailMessage}}</div>
                 </div>
-            </li>
-            <li>
-                <label for="registerPassword">Passwort</label>
-                <input type="password" id="registerPassword" name="registerPassword"
-                       ng-model="user.password" required/>
                 <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
-                    <div ng-show="registerForm.registerPassword.$error.required">Fill in a password.</div>
-                    <div ng-show="registerCtrl.registerEror.passwordMessage">{{registerCtrl.registerEror.passwordMessage}}</div>
-                </div>
-                <br />
-                <div ng-show="registerCtrl.registerEror">
-                    <div>{{registerCtrl.registerEror.message}}</div>
+                    <span class="formfeedback" ng-show="registerForm.registerPassword.$error.required">Fill in a password.</span>
+                    <span class="formfeedback" ng-show="registerCtrl.registerEror.passwordMessage">{{registerCtrl.registerEror.passwordMessage}}</span>
                 </div>
             </li>
             <li>
-                <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
+                <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect "
                         ng-disabled="registerForm.$invalid">Registrieren
                 </button>
             </li>
