--- a/Server/public/js/directives/searchResultlist.tpl.html
+++ b/Server/public/js/directives/searchResultlist.tpl.html
@@ -1,9 +1,60 @@
 <div class="searchResultlist">
 <label>Results:</label>
-
     <div ng-repeat="recipe in recipes | SearchRecipeFilter: recipeFilter">
         <a href="#/viewRecipe/{{recipe._id}}">{{recipe.title}}</a>
     </div>
+    <table style="width: 100%;">
+        <thead>
+            <td>&nbsp;</td>
+            <td>Rezept</td>
+            <td>Bewertung</td>
+            <td>Kochzeit</td>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="width: 20%;">
+                    <img src="pictures/kafi_200q.jpg" style="max-width: 100px; height: auto" />
+                </td>
+                <td style="width: 50%;">
+                    <h5>Rezepttitel</h5>
+                    <a href="#/viewRecipe/{{recipe._id}}">{{recipe.title}}</a>
+                </td>
+                <td style="width: 15%;">
+                    <span>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star_half</i>
+                        <i class="material-icons">star_border</i>
+                        <i class="material-icons">star_border</i>
+                    </span>
+                </td>
+                <td style="width: 15%;">
+                    30 min
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 20%;">
+                    <img src="pictures/kafi_200q.jpg" style="max-width: 100px; height: auto" />
+                </td>
+                <td style="width: 50%;">
+                    <h5>Mega langer Rezepttitel mit ausführlicher Beschreibung</h5>
+                    <a href="#/viewRecipe/{{recipe._id}}">{{recipe.title}}</a>
+                </td>
+                <td style="width: 15%;">
+                    <span>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star</i>
+                        <i class="material-icons">star_half</i>
+                        <i class="material-icons">star_border</i>
+                    </span>
+                </td>
+                <td style="width: 15%;">
+                    30 min
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
 
