include material.js

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/lib/angular-animate.js"></script>
     <script type="text/javascript" src="js/lib/angular-route.js"></script>
+    <script type="text/javascript" src="js/lib/material.js"></script>
     <title>Fetty Bossy-DB version 0.12</title>
     <style>
         .outer-wrapper{
@@ -33,7 +34,6 @@
 
 <!--own code - interface not imported because of no need in javascript -->
 <script type="text/javascript" src="js/app-module.js"></script>
-
 <script type="text/javascript" src="js/app-routes.js"></script>
 
 <script type="text/javascript" src="js/controllers/AddeditRecipeRatingController.js"></script>
